<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/team_a_linear_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingRight="24dp"
            android:paddingLeft="24dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/team_a_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_a_name"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/counter_team_a"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:id="@+id/team_a_3points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/three_points"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_a_2points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/two_points"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_a_1point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/free_throw"
                android:textAllCaps="true" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" >

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/team_b_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_b_name"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/counter_team_a"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:id="@+id/team_b_3points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/three_points"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_b_2points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/two_points"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/team_b_1point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/free_throw"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/reset_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/reset_button"
        android:textAllCaps="true" />
</RelativeLayout>
